--- a/main.css
+++ b/main.css
@@ -81,10 +81,15 @@ body {
 
 .para {
 	color: #fff;
-	font-size: 1rem;
+	font-size: 1.75rem;
 }
 
-
+.img {
+    float: right;
+    margin: 0 0 10px 10px;
+    padding:5px;
+   	border:2px solid #787878;
+}
 
 
 
