--- a/main.css
+++ b/main.css
@@ -91,8 +91,40 @@ body {
    	border:2px solid #787878;
 }
 
+.sub-heading-title {
+	color: #BBB;
+	font-size:1.7rem;
+	font-weight: bold;
+}
 
+.role {
+	color: #fff;
+	font-size:1.6rem;
+	font-weight: bold;
+}
 
+.company {
+	color: #fff;
+	font-size: 1.6rem;
+	font-weight: 100;
+	font-family: Arial, sans-serif;
+}
 
+.year {
+	color: #B8B8B8;
+	font-size: 1.4rem;
+	font-weight: 100;
+}
+
+.bullet-para {
+	color: #B8B8B8;
+	font-size: 1.75rem;
+}
+
+ul {
+	list-style-type: square;
+	color:#fff;
+	size: 1.5rem;
+}
 
 
