--- a/styles/main.css
+++ b/styles/main.css
@@ -84,7 +84,7 @@ body {
 	font-size: 1.75rem;
 }
 
-.img {
+.article-image {
     float: right;
     margin: 0 0 10px 10px;
     padding:5px;
@@ -121,7 +121,7 @@ body {
 	font-size: 1.75rem;
 }
 
-ul {
+.bullet-style {
 	list-style-type: square;
 	color:#fff;
 	size: 1.5rem;
