--- a/styles/main.css
+++ b/styles/main.css
@@ -97,20 +97,23 @@ body {
 	font-weight: bold;
 }
 
-.role {
+.list-head {
+	display: inline;
 	color: #fff;
 	font-size:1.6rem;
 	font-weight: bold;
 }
 
-.company {
+.list-sub {
+	display: inline;
 	color: #fff;
 	font-size: 1.6rem;
 	font-weight: 100;
 	font-family: Arial, sans-serif;
 }
 
-.year {
+.list-small {
+	display: inline;
 	color: #B8B8B8;
 	font-size: 1.4rem;
 	font-weight: 100;
